--- a/visualizations/theme.html
+++ b/visualizations/theme.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scholarship Theme</title>
+    <style>
+      .legend-icon,
+      .legend-text {
+        vertical-align: middle;
+        display: inline-block;
+      }
+      .legend-text {
+        margin-left: 5px;
+      }
+      .legend-item {
+        margin-bottom: 5px;
+      }
+    </style>
   </head>
   <body>
     <h1>Color Palette</h1>
@@ -19,6 +32,34 @@
       <div style="background-color: #ca61c3; width: 10%; height: 100px"></div>
       <div style="background-color: #011627; width: 10%; height: 100px"></div>
       <div style="background-color: #531cb3; width: 10%; height: 100px"></div>
+    </div>
+    <h1>Legend</h1>
+    <div>
+      <div><b>Types of Nodes</b></div>
+      <div class="legend-item">
+        <span class="legend-icon">
+          <svg width="20" height="20">
+            <rect width="20" height="20" style="fill: red" />
+          </svg>
+        </span>
+        <span class="legend-text">Contractor</span>
+      </div>
+      <div class="legend-item">
+        <span class="legend-icon">
+          <svg height="20" width="20">
+            <circle cx="10" cy="10" r="10" fill="green" />
+          </svg>
+        </span>
+        <span class="legend-text">Subcontractor</span>
+      </div>
+      <div class="legend-item">
+        <span class="legend-icon">
+          <svg height="20" width="20">
+            <polygon points="10 3, 20 20, 0 20" fill="lightblue" />
+          </svg>
+        </span>
+        <span class="legend-text">Subcontract</span>
+      </div>
     </div>
   </body>
 </html>
