Clean up website, add references

--- a/index.html
+++ b/index.html
@@ -274,16 +274,24 @@
             financial assistance awards of more than $25,000 are displayed on a
             publicly accessible and searchable website to give the American
             people access to information on how their tax dollars were being
-            spent. Through a wide variety of processes, the US government
-            ensures the quality of the data sourced through multiple internal
-            data systems. Here, the focus is looking at the investments made by
-            the government, through contracts and the subsequent investments in
+            spent
+            <a href="https://www.usaspending.gov/about" target="_blank"
+              >(USA Spending Mission Statement)</a
+            >. Through a wide variety of processes, the US government ensures
+            the quality of the data sourced through multiple internal data
+            systems. Here, the focus is looking at the investments made by the
+            government, through contracts and the subsequent investments in
             subcontracts. Contracts are an agreement creating mutual obligations
             between parties that are enforceable by law. Government contracts
             specifically are contracts between the US government and businesses
             that "obligate the seller to provide the supplied or services
             (including construction) and the buyer (the US Government) to pay
-            for them" (USA Spending).
+            for them"
+            <a
+              href="https://www.usaspending.gov/?glossary=definitive-contract"
+              target="_blank"
+              >(USA Spending)</a
+            >.
           </div>
         </div>
         <div class="row">
@@ -291,14 +299,18 @@
             In a recent executive order from the Biden Administration,
             cybersecurity standards for United States defense contracts became
             much more rigorous. However, according to an article in CPO Magazine
-            (insert link), "a survey of 300 small-to-medium business defense
-            contractors found common failures to comply with CMMC requirements,
-            with 48% having severe vulnerabilities" (CPO). This is highly
-            concerning on the National Security front, where not only does the
-            US government need to worry about themselves being vulnerable to
-            cyberattacks, but they also need to worry about their defense
-            contractors being vulnerable. Recently, a list of critical and
-            emerging technologies was announced by the Fast Track Action
+            , "a survey of 300 small-to-medium business defense contractors
+            found common failures to comply with CMMC requirements, with 48%
+            having severe vulnerabilities"
+            <a
+              href="https://www.cpomagazine.com/cyber-security/us-defense-contractors-failing-to-meet-cmmc-requirements-48-have-severe-vulnerabilities/"
+              target="_blank"
+              >(CPO Magazine)</a
+            >. This is highly concerning on the National Security front, where
+            not only does the US government need to worry about themselves being
+            vulnerable to cyberattacks, but they also need to worry about their
+            defense contractors being vulnerable. Recently, a list of critical
+            and emerging technologies was announced by the Fast Track Action
             Subcommittee on Critical and Emerging Technologies (CETs) of the
             National Science and Technology Council. This list included
             Artificial Intelligence, Biotechnologies, Quantum Information
@@ -313,7 +325,7 @@
         </div>
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
-            There are two steps to determining the businesses that need to
+            There are two steps in determining the businesses that need to
             prioritize improving their cybersecurity protection. First, a list
             of all of the recent contracts and contractors needs to be filtered
             down to only those that provide a specific type of technologies
@@ -330,12 +342,19 @@
             In 2016, the Department of Defense awarded a contract to Raytheon
             for the second phase of the Hypersonic Air-Breathing Weapon Concept.
             Raytheon is one of the largest "aerospace, intelligence services
-            providers, and defense manufacturers in the world." According to the
-            USA Spending website, they have been awarded over $4.7 billion in
-            contracts, primarily from the Department of Defense, and primarily
-            for products like guided missiles and bombs
-            (https://www.usaspending.gov/recipient/01c4a3a3-b4c5-ce4e-822b-d17f09985001-C/latest).
-            Clearly, from the contract description and the company that was
+            providers, and defense manufacturers in the world"
+            <a
+              href="https://en.wikipedia.org/wiki/Raytheon_Technologies"
+              target="_blank"
+              >(Wikipedia)</a
+            >. According to the USA Spending website, they have been awarded
+            over $4.7 billion in contracts, primarily from the Department of
+            Defense, and primarily for products like guided missiles and bombs
+            <a
+              href="https://www.usaspending.gov/recipient/01c4a3a3-b4c5-ce4e-822b-d17f09985001-C/latest"
+              target="_blank"
+              >(Raytheon Contracts)</a
+            >. Clearly, from the contract description and the company that was
             awarded the contract, Raytheon is an important company that the US
             government should have a vested interest in protecting from
             cybersecurity threats. However, according to the contract, there are
@@ -344,10 +363,8 @@
             subcontractors should be prioritized in the same way that Raytheon
             will be. The following sections will visualize the subcontractor
             data in such a way so that it will become clear which subcontractors
-            are more important in the supply chain. First, in
-            <i>Figure 1</i>, a fundamental timeline shows the Raytheon contract
-            and a couple of subcontracts awarded around the time of the official
-            contract.
+            are more important in the supply chain. First, in <i>Figure 1</i>, a
+            timeline shows the Raytheon contract plus a couple of subcontracts.
           </div>
         </div>
       </div>
@@ -380,7 +397,7 @@
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
             Using the above timeline, several important dates and subcontracts
-            stood out immediately when looking at the data manually from a high
+            stood out immediately when manually looking at the data from a high
             level. First, the Raytheon contract started in October of 2016 and
             ended as of March 2022. Before the contract was awarded, several
             large subcontracts were awarded to Alliant Techsystems, which upon
@@ -392,7 +409,8 @@
             through the subcontracts, there is a clear indication that some of
             these businesses provide critical supplies for building hypersonic
             devices. Two subcontracts are shown, one that provides batteries
-            (ATB) and one that provides accelerometers and cables (Dytran).
+            (Advanced Thermal Batteries) and one that provides accelerometers
+            and cables (Dytran).
           </div>
         </div>
         <div class="row">
@@ -444,7 +462,7 @@
           <div class="col-lg-11 mx-auto my-1">
             In <i>Figure 2</i>, the viewer gets the first taste of the
             progression of all of the subcontracts awarded during the time of
-            the Raytheon contract. This progression could be traceable to the
+            the Raytheon contract. This progression might be traceable to the
             steps for producing the hypersonic missiles. For example, the
             earlier subcontracts would be vital as they supply parts for the
             missiles, while the later subcontracts would be for testing and
@@ -560,7 +578,7 @@
           <div class="col-lg-11 mx-auto my-1">
             However, a limitation of this chart is that Alliant Techsystems is
             so large that it overwhelms the rest of the subcontracts to the
-            point where it is unclear how large they are. It would be much
+            point where it is unclear how large the rest are. It would be much
             easier to visualize the relative funding size of the rest of the
             subcontracts by filtering out Alliant Techsystems from the chart. To
             see this filtered visualization <i>(Figure 4)</i>, click on the tab
@@ -731,8 +749,8 @@
             services they provide, as most of the contracts descriptions are
             <i>Cost Plus Fixed Fee</i>. Next, the network clearly shows the Top
             8 funded subcontractors. By looking at each of these subcontractors
-            and their subcontracts, many subcontractors have a similar sounding
-            subcontract, which provides little information.
+            and their subcontracts, many subcontractors similar sounding
+            subcontracts, which provides little information.
             <b
               >However, upon closer inspection, one subcontractor stands out.</b
             >
@@ -767,10 +785,10 @@
             <b>L3 Technologies</b> has multiple contracts for encoders. Finally,
             <b>Ducommun</b> has a large number of contracts for supplies such as
             cable assemblies and CCAs (Circuit Card Assemblies). By narrowing
-            the number of subcontractors to 8-10 from a much larger list, it
-            becomes easier to see which should be considered a higher priority
-            for a cybersecurity analysis and further protection as an asset to
-            the US government.
+            down the number of subcontractors to 8-10 from a much larger list,
+            it becomes easier to see which should be considered a higher
+            priority for a cybersecurity analysis and further protection as an
+            asset to the US government.
           </div>
         </div>
       </div>
@@ -797,8 +815,8 @@
           </div>
           <div class="row">
             <div class="col-lg-11 mx-auto my-1">
-              A simple wordcloud can be used to visualize better the types of
-              keywords seen in the descriptions of subcontracts. In
+              A simple wordcloud can be used to visualize the types of keywords
+              seen in the descriptions of subcontracts. In
               <i>Figure 7</i>, the most common keywords are seen in larger text.
               This indicates more descriptions containing this keyword. From
               this visualization, some keywords begin to stick out as they
@@ -836,7 +854,7 @@
           <div class="col-lg-11 mx-auto my-1">
             In <i>Figure 7</i>, keywords including batteries, detonators,
             launchers, fuses, and transmitters (among others) stand out. These
-            are words that description supplies critical to hypersonic missile
+            are words that describe supplies critical to hypersonic missile
             production. By finding the subcontracts that provide these products,
             cybersecurity protection efforts can target these companies.
           </div>
@@ -982,7 +1000,7 @@
               point of failure.</b
             >
             Perhaps by filtering down to those that produce distinct products, a
-            a clearer view of the most critical subcontractors can be seen.
+            clearer view of the most critical subcontractors can be seen.
             Discuss findings in the network. Theorize that some of the
             subcontracts are far more important, and using this network, we can
             see which subcontracts provide which. This allows Raytheon to single
@@ -1157,12 +1175,12 @@
               subcontractors stand out.</b
             >
             AllComp Inc has different sets of subcontracts for two different and
-            unique products. One set of subcontracts is for fasteners, and one
-            is for missiles and antennas. Next, Pacific Scientific Energetic
-            Material Company has two sets of subcontracts, one set for
-            explosives and one for nuts. These two subcontractors should be
-            considered the most important and most vulnerable to a cybersecurity
-            incident.
+            unique products. One set of subcontracts is for fasteners, and
+            separately, one is for missiles and antennas. Next, Pacific
+            Scientific Energetic Material Company has two sets of subcontracts,
+            one set for explosives and separately, one for nuts. These two
+            subcontractors should be considered the most important and most
+            vulnerable to a cybersecurity incident.
           </div>
         </div>
       </div>
@@ -1183,7 +1201,7 @@
             than any other subcontract awarded to the rest of the
             subcontractors. It was not clear what each of the subcontracts for
             Alliant Techsystems was for, but investing that much capital into
-            that many subcontractors is a clear outlier.
+            that many subcontracts is a clear outlier.
             <b
               >Regardless of what each subcontract is for, Alliant Techsystems
               should be targeted for more protection against cybersecurity
@@ -1194,10 +1212,10 @@
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
             The second method utilized the description of each subcontract to
-            narrow the focus on subcontractors that produced unique products
-            critical to the supply chain. The final iteration, shown in Figure
-            11, shows a set of 13 subcontractors that are critical to the supply
-            chain.
+            narrow the focus to subcontractors that produced unique products
+            critical to the supply chain. The final iteration, shown in
+            <i>Figure 11</i>, shows a set of 13 subcontractors that are critical
+            to the supply chain.
             <b
               >Two of these subcontractors, AllComp Inc and Pacific Scientific
               Energetic Material Company have multiple different contracts for
