Minor changes to title and first paragraph

--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
     <script src="https://rawgit.com/mholt/PapaParse/master/papaparse.js"></script>
     <script src="./visualizations/personal-theme.js"></script>
     <style>
+      .title {
+        -webkit-text-stroke: 0.5px black;
+      }
       figcaption {
         text-align: center;
         font-style: italic;
@@ -102,15 +105,16 @@
   <body class="index-page">
     <header class="header-2">
       <div
-        class="page-header min-vh-75 relative"
+        class="page-header relative"
         style="
-          background-image: url('./assets/img/curved-images/curved5-small.jpg');
+          background-image: url('./assets/img/curved-images/curved-10.jpg');
+          min-height: 600px;
         "
       >
         <div class="container">
           <div class="row">
             <div class="col-lg-7 text-center mx-auto">
-              <h1 class="text-white pt-3 mt-n5">
+              <h1 class="text-white pt-3 mt-n5 title">
                 Cyber Risk Management and Prioritization
               </h1>
               <p class="lead text-white mt-3">
@@ -252,7 +256,7 @@
         <div class="row justify-content-center text-center my-sm-5">
           <div class="col-lg-9">
             <h2 class="text-dark mb-0">
-              Visualizing networks of contracts and subcontracts
+              Visualizing Networks of Contracts and Subcontracts
             </h2>
             <p class="lead">
               Using a wide variety of visualizations, we will uncover the
@@ -269,17 +273,17 @@
         <h3 class="text-dark mb-3">Understanding United States Contracts</h3>
         <div class="row">
           <div class="col-lg-11 mx-auto my-1">
-            In 2006, the Federal Funding Accountability and Transparency Act was
-            signed into law and required that federal contract, loan, and other
-            financial assistance awards of more than $25,000 are displayed on a
-            publicly accessible and searchable website to give the American
-            people access to information on how their tax dollars were being
-            spent
+            Instituted in 2006, the Federal Funding Accountability and
+            Transparency Act (FFATA) requires that federal contract, loan, and
+            other financial assistance awards of more than $25,000 are displayed
+            on a publicly accessible and searchable websiteto to provide the
+            American people better access to information on government revenue
+            and spending.
             <a href="https://www.usaspending.gov/about" target="_blank"
               >(USA Spending Mission Statement)</a
-            >. Through a wide variety of processes, the US government ensures
-            the quality of the data sourced through multiple internal data
-            systems. Here, the focus is looking at the investments made by the
+            >. Through a variety of processes, the US government ensures the
+            quality of the data sourced through multiple internal data systems.
+            Here, the focus is looking at the investments made by the
             government, through contracts and the subsequent investments in
             subcontracts. Contracts are an agreement creating mutual obligations
             between parties that are enforceable by law. Government contracts
